# typical

./: Cargo.toml
src/: main.rs  state.rs
src/cli/: lex.rs  mod.rs  repl.rs  test.rs
src/logic/: mod.rs  pretty.rs  res.rs  stmt.rs
src/parser/: bound.rs  decl.rs  generics.rs  impl_.rs  lexer.rs  mod.rs  repl.rs  test.rs  ty.rs
src/parser/def/: decl.rs  generics.rs  impl_.rs  mod.rs  where_.rs
src/parser/logic/: bound.rs  eq.rs  mod.rs
src/parser/ty/: mod.rs  named.rs
src/ty/: args.rs  bound.rs  decl.rs  display.rs  impl_.rs  inst.rs  is_bound.rs  is_exactly.rs  mod.rs  parse.rs  path.rs
tests/: basic.type  basic_impl.type  chocie.type  imply.type
