[package]
name = "typical"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2.0"
chumsky = { git = "https://github.com/zesterer/chumsky.git", branch = "main" }
logos = "0.14"
clap = { version = "4", features = ["derive"] }
ariadne = "0.5.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
glob = "0.3.2"
yansi = "1.0.1"
rustyline = "15.0.0"
pretty = "0.12.3"
